--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/CSS/style.css">
-    <link rel="stylesheet" href="/CSS/mobile.css">
+    <link rel="stylesheet" href="./CSS/style.css">
+    <link rel="stylesheet" href="./CSS/mobile.css">
     <title>Vocab</title>
     
 </head>
@@ -224,6 +224,6 @@
     </section>
 </body>
 
-<script src="/javascript/javasmainpagesearch.js"></script>
+<script src="./javascript/javasmainpagesearch.js"></script>
 
 </html>
