--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav id="navbar">
 
         <div id="logo">
-            <a href="./index.html"><img src="/photos/logo.jpeg" alt="Vocab Logo"></a>
+            <a href="./index.html"><img src="./photos/logo.jpeg" alt="Vocab Logo"></a>
         </div>
         <ul id="navs">
             <li class="items"><a href="#home">Home</a></li>
@@ -87,7 +87,7 @@
         <div id="container">
             <div class="serve" id="one">
                 <br>
-                <img src="/photos/in short span.jpeg" alt="Short span">
+                <img src="./photos/in short span.jpeg" alt="Short span">
                 <h3>• Now, learning vocabulary is possible in short span of time.</h3>
                 <p>If you’re wondering how to study vocabulary in a short span, look no further. Here’s a quick reminder of what is most important when you learn new words.
                     If you follow these steps, you won’t waste any time or energy:- <br>br
@@ -101,7 +101,7 @@
             </div>
             <div class="serve" id="two">
                 <br>
-                <img src="/photos/highly experienced faculty.jpeg" alt="Highly experienced faculty">
+                <img src="./photos/highly experienced faculty.jpeg" alt="Highly experienced faculty">
                 <h3>• Highly experienced faculty, offering demo classes too.</h3>
                 <p>~We have a set of faculty members who not only have a lot of experience in their area of specialization but also in guiding civil services aspirants. <br>
                     ~They are bilingual and can provide guidance and conduct sessions in both English and Hindi. <br>
@@ -111,7 +111,7 @@
             </div>
             <div class="serve" id="three">
                 <br>
-                <img src="/photos/importance on vocabulary skills.jpeg" alt="importance on vocabulary skills">
+                <img src="./photos/importance on vocabulary skills.jpeg" alt="importance on vocabulary skills">
                 <h3>• We place importance on vocabulary skills.</h3>
                 <p>~Vocabulary Expands Knowledge <br>
                     ~Vocabulary Helps With Expression <br>
@@ -124,7 +124,7 @@
             </div>
             <div class="serve" id="four">
                 <br>
-                <img src="/photos/begineer , intermediate and advanced.jpeg" alt="3 tiers of Vocab">
+                <img src="./photos/begineer , intermediate and advanced.jpeg" alt="3 tiers of Vocab">
                 <h3>• Beginners, intermediates and advanced (all the levels of classes are entertained here)</h3>
                 <p>You can find separate courses according to your level. <br><br>
                     ~Begineer Level <br>
@@ -135,7 +135,7 @@
             </div>
             <div class="serve" id="five">
                 <br>
-                <img src="/photos/individual and group lessons.jpeg" alt="individual and group lessons">
+                <img src="./photos/individual and group lessons.jpeg" alt="individual and group lessons">
                 <h3>• Both individual and group lessons are available at request</h3>
                 <p>Both individual and group lessons are available at request. <br><br>
                     ~Course content <br>
@@ -181,7 +181,7 @@
                 </div>
             </div>
             <div class="cols" id="cols2">
-                <img src="/photos/logo.jpeg" alt="Logo">
+                <img src="./photos/logo.jpeg" alt="Logo">
             </div>
         </div>
     </section>
